# AIOT_final_project

./: .gitignore  README.md  chat_log.md  spec.md
Combine_System/: README.md  chat_all_log.md  chat_log.md  pyproject.toml  requirements.txt  setup_rpi.sh  test.py
Combine_System/src/combine_system/: __init__.py  api_handler.py  app.py  config.py  db.py  event_bus.py  models.py  state_machine.py
Combine_System/src/combine_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Node_A_Pi/: pyproject.toml  setup_rpi.sh
Node_A_Pi/src/combine_system/: app.py  calibration.py  pose.py  ws_server.py
Node_B/: pyproject.toml
Node_B/esp32/: README.md  aiot_esp32.ino
Node_B/src/node_b/: server.py
Node_C/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
Node_C/src/: App.tsx  index.css  types.ts
Node_C/src/components/: AttentionPanel.tsx  ControlButtons.tsx  GazeTracker.tsx  MetricCard.tsx  PosturePanel.tsx  StatusBadge.tsx  VideoStream.tsx
Node_C/src/hooks/: useHistory.ts  useWebSocket.ts
Node_C/src/pages/: Dashboard.tsx  History.tsx
skills/chat-log-maintainer/: SKILL.md
skills/chat-log-maintainer/agents/: openai.yaml
skills/chat-log-maintainer/references/: chat-log-format.md
